Created Brand Page

--- a/MY_Hershey_UI/index_2.html
+++ b/MY_Hershey_UI/index_2.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <div id="wrapper">
+        
+
+        <!---- --------------- -->
         <div class="hero-licensing">
             <div class="hero-con-1">
                 <div class="con-1-content">
@@ -68,7 +71,7 @@
                     <img src="Brands_Assets/5_img_licensing.jpg" alt="">
                     <div class="card-con">
                         <h3>Why Shopper Behavior is Key to Your Retail Strategy</h3>
-                        <p>At Hershey, we are customer obsessed. We are constantly investing in research that helps us better understand shoppers so that we can assist our retail partners in improving consumer-centric strategies.</p>
+                        <p>At Hershey, we are customer obsessed. We are constantly investing in research that helps us better understand shoppers so that we can assist our retail partners in improving .</p>
                     </div>
                 </div>
             </div>
@@ -79,16 +82,15 @@
         <div id="global">
             <div class="global-text">
                 <div class="global-content">
-                    <i class="fa fa-globe-americas"></i><br>
+                    <i class="fa fa-globe-americas"></i><br><br>
                     <h2>Global Licensing Program</h2>
                     <br>
-                    <div>Want to learn more how you can connect with Hershey’s global licensing program and explore partnerships with some of the worlds most beloved brands? <br>
-                    </div><br>
-                    <br>
+                    <p>Want to learn more how you can connect with Hershey’s global licensing program and explore partnerships with some of the worlds most beloved brands? <br>
+                    </p><br>
+                    <br><br>
                     <a href="" class="button">
                         Contact Global Licensing
                     </a>
-                    
                 </div>
             </div>
         </div>
