Brand and Licensing ORIGINAL

--- a/MY_Hershey_UI/index_2.html
+++ b/MY_Hershey_UI/index_2.html
@@ -48,8 +48,39 @@
         </div>
 
 
+        <div class="updates">
+            <h2>Related Articles </h2>
+            <div class="updates_con">
 
-        <div class="licensing-articles">
+                <div class="cards">
+                    <img src="Brands_Assets/3_img_licensing.jpg" alt="">
+                    <div class="card_con">
+                        <h3><a href="">Category Management is Evolving. Here’s What You Need to Know.</a></h3>
+                        <p>Category management is changing, and if retailers and manufacturers aren’t evolving with it, they risk being left behind.</p>
+                    </div>
+                </div>
+                <div class="cards">
+                    <img src="Brands_Assets/4_img_licensing.jpg" alt="">
+                    <div class="card_con">
+                        <h3><a href="">Unlocking Growth by Putting Data to Work</a>
+                        </h3>
+                        <p>Earlier this year, Groceryshop brought thousands of industry insiders to Las Vegas to discuss innovation in grocery and consumer packaged goods.</p>
+                    </div>
+                </div>
+                <div class="cards">
+                    <img src="Brands_Assets/5_img_licensing.jpg" alt="">
+                    <div class="card_con">
+                        <h3><a href="">Why Shopper Behavior is Key to Your Retail Strategy</a>
+                        </h3>
+                        <p>At Hershey, we are customer obsessed. We are constantly investing in research that helps us better understand shoppers so that we can assist our retail partners in improving .</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <!-- <div class="licensing-articles">
             <h2>Related Articles </h2>
             <div class="articles-con">
 
@@ -76,7 +107,7 @@
                 </div>
             </div>
 
-        </div>
+        </div> -->
 
 
         <div id="global">
@@ -85,9 +116,9 @@
                     <i class="fa fa-globe-americas"></i><br><br>
                     <h2>Global Licensing Program</h2>
                     <br>
-                    <p>Want to learn more how you can connect with Hershey’s global licensing program and explore partnerships with some of the worlds most beloved brands? <br>
+                    <p>Want to learn more how you can connect with Hershey’s global licensing program and explore partnerships with some of the worlds most beloved brands?
                     </p><br>
-                    <br><br>
+                    <br>
                     <a href="" class="button">
                         Contact Global Licensing
                     </a>
