--- a/Rough_Copy/Rough_index.html
+++ b/Rough_Copy/Rough_index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Innovation_Licensing</title>
+    <title> BRANDS</title>
     <link rel="stylesheet" href="Rough_styles.css">
 
     <title>ROUGH</title>
@@ -145,6 +145,12 @@
             <h2>Sweets Reimagined</h2><br><br>
             <p>Delicious, drool-worthy sweets that&nbsp;are botanically sweetened—meaning no refined or processed sugars.
             </p>
+            <br><br>
+            <a href="#"  class="brown-button">Learn More</a> 
+            <span>&nbsp;&nbsp;&nbsp;</span>
+            <span class="article-5-button-front-text">
+                <a href="#" >Buy Lily's</a>   
+                </span>
             
               
         </div>
